[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "d3"
path = "src/d3.rs"

[[bin]]
name = "d4"
path = "src/d4.rs"

[[bin]]
name = "d5"
path = "src/d5.rs"
